--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
 
     <div class="jumbotron bg-primary">
-      <h1 class="font-weight-bold"><i class="fas fa-subway"></i>Cool Train Stuff</h1>
+      <h1 class="font-weight-bold"><i class="fas fa-subway"></i>Train Scheduling Tool</h1>
     </div>
 
     <div class="row">
